--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -2,3 +2,4 @@
 <p>みんなでプロ野球を盛り上げよう！！！</p>
 
 <%= link_to 'アカウント作成', signup_path, class: 'btn btn-lg btn-primary' %>
+<%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
