--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header class="mb-4">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
-      <img src="/assets/hedder_logo.png" width="30" height="30" class="d-inline-block align-top" alt="ボールとバットとスタジアムのイラスト" title="ヘッダーのロゴ">
+      <img src="/assets/hedder_logo.png" width="30" height="30" class="d-inline-block align-top" alt="ロゴイラスト" title="ロゴイラスト">
       プロ野球応援スタジアム
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
+        <li class="nav-item"><%= link_to 'ログイン', login_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to 'アカウント作成', signup_path,  class: "nav-link" %></li>
       </ul>
     </div>
