--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,11 @@
     </div>
   </div>
   <div class="offset-sm-2 col-sm-6">
-    <li>
-      <ul>好きな球団：</ul>
-      <ul>注目の選手・好きな選手：</ul>
-    </li>
-  </div>  
+    <ul>
+      <li>好きな球団：</li>
+      <li>注目の選手・好きな選手：</li>
+    </ul>
+  </div> 
 </div>
+
+<%= link_to 'プロフィール編集', edit_user_path, class: 'btn btn-primary btn-block' %>
