--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,10 @@
-<h1>プロ野球応援スタジアム</h1>
-<p>みんなでプロ野球を盛り上げよう！！！</p>
+<% if logged_in? %>
+  <h1>プロ野球応援スタジアム</h1>
+  <p>みんなでプロ野球を盛り上げよう！！！</p>
+<% else %>
+  <h1>プロ野球応援スタジアム</h1>
+  <p>みんなでプロ野球を盛り上げよう！！！</p>
 
-<%= link_to 'アカウント作成', signup_path, class: 'btn btn-lg btn-primary' %>
-<%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to 'アカウント作成', signup_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
+<% end %>
