--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,3 +18,9 @@
 </div>
 
 <%= link_to 'プロフィール編集', edit_user_path, class: 'btn btn-primary btn-block' %>
+
+<ul class="nav nav-tabs nav-justified mb-3">
+  <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">応援メッセージ<span class="badge badge-secondary"><%= @count_messages %></span></a></li>
+  <li class="nav-item"><a href="#" class="nav-link">お気に入り</a></li>
+</ul>
+<%= render 'messages/messages', messages: @messages %>
