--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="row">
+  <aside class="col-sm-6">
+    <%= form_with(model: @message, local: true) do |f| %>
+      <div class="form-group">
+        <%= f.text_area :content, class: 'form-control', rows: 5 %>
+      </div>
+      <%= f.submit '応援メッセージの投稿', class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </aside>
+  <div class="col-sm-6">
+    <%= render 'messages/messages', messages: @messages %>
+  </div>
+</div>
