--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -14,6 +14,19 @@
             <%= link_to "削除", message, method: :delete, data: { confirm: "このメッセージを削除しますか?" }, class: 'btn btn-danger btn-sm' %>
           <% end %>
         </div>
+        <div>
+          <% if current_user.favorite?(message) %>
+            <%= form_with(model: current_user.favorites.find_by(message_id: message.id), local: true, method: :delete) do |f| %>
+              <%= hidden_field_tag :message_id, message.id %>
+              <%= f.submit 'Unfavorite', class: 'btn btn-danger btn-sm' %>
+            <% end %>
+          <% else %>
+            <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
+              <%= hidden_field_tag :message_id, message.id %>
+              <%= f.submit 'Favorite', class: 'btn btn-primary btn-sm' %>
+            <% end %>
+          <% end %>
+        </div>
       </div>
     </li>
   <% end %>
