--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
         <% if logged_in? %>
           <li class="nav-item"><%= link_to 'ホーム', users_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %></li>
-          <li class="nav-item"><a href="#" class="nav-link">掲示板</a></li>
+          <li class="nav-item"><%= link_to '掲示板', myteams_user_path(current_user), class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
         <% else %>
           <li class="nav-item"><%= link_to 'ログイン', login_path, class: "nav-link" %></li>
