--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,7 +29,9 @@
       </div>
       
       <div class="form-group">
-        <%= f.collection_select :team_id, Team.all, :id, :team_name %>
+        <%= f.label :team_id, '好きな球団を1つ選択してください。' %>
+        <%= f.label :team_id, '好きな球団を選択すると選択した球団の掲示板にアクセスできます。' %>
+        <%= f.collection_select :team_id, Team.all, :id, :team_name, include_blank: true %>
       </div>
 
       <%= f.submit '完了', class: 'btn btn-primary btn-block' %>
