--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,22 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+.container-fluid {
+    padding: 0;
+}
+
+.pagination {
+    justify-content: center;
+}
+
+.pagination li a {
+    border: none;
+}
+
+body {
+    padding-top: 50px; 
+    background-color: #f8f8ff;
+}
