--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
-<header class="mb-4">
+<div class='fixed-top'>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
-      <img src="/assets/hedder_logo.png" width="30" height="30" class="d-inline-block align-top" alt="ロゴイラスト" title="ロゴイラスト">
+      <img src="/assets/hedder_logo.png" width="30" height="30" class="d-inline-block align-top" alt="ロゴイラスト" title="ロゴイラスト">
       プロ野球応援スタジアム
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -22,4 +22,4 @@
       </ul>
     </div>
   </nav>
-</header>
+</div>
