--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csp_meta_tag %>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -18,9 +18,11 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
+    <div class='header'>
+      <%= render 'layouts/navbar' %>
+    </div>
 
-    <div class="container">
+    <div class="container-fluid">
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
