--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -1,31 +1,40 @@
-<ul class="list-unstyled">
+<%= stylesheet_link_tag 'message' %>
+
+<ul class="list-unstyled messages">
   <% messages.each do |message| %>
-    <li class="media mb-3">
+    <li class="media p-2 message">
       <img class="mr-2 rounded" src="<%= gravatar_url(message.user, { size: 50 }) %>" alt="">
       <div class="media-body">
         <div>
-          <%= message.user.name %> <span class="text-muted">posted at <%= message.created_at %></span>
+          <%= message.user.name %> <span class="text-muted"> : <%= message.created_at.strftime("%Y年%m月%d日 %H:%M") %></span>
         </div>
         <div>
-          <p class="mb-0"><%= message.content %></p>
-        </div>
-        <div>
-          <% if current_user == message.user %>
-            <%= link_to "削除", message, method: :delete, data: { confirm: "このメッセージを削除しますか?" }, class: 'btn btn-danger btn-sm' %>
-          <% end %>
-        </div>
-        <div>
-          <% if current_user.favorite?(message) %>
-            <%= form_with(model: current_user.favorites.find_by(message_id: message.id), local: true, method: :delete) do |f| %>
-              <%= hidden_field_tag :message_id, message.id %>
-              <%= f.submit 'Unfavorite', class: 'btn btn-danger btn-sm' %>
+          <p class="mb-0 user-message"><%= message.content %></p>
+          
+          <div class = "user-message icon">
+            <% if current_user == message.user %>
+              <%= link_to message, method: :delete, data: { confirm: "このメッセージを削除しますか?" } do %>
+                <i class="far fa-trash-alt"></i>
+              <% end %>
             <% end %>
-          <% else %>
-            <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
-              <%= hidden_field_tag :message_id, message.id %>
-              <%= f.submit 'Favorite', class: 'btn btn-primary btn-sm' %>
+          </div>
+          <div class = "user-message icon">
+            <% if current_user.favorite?(message) %>
+              <%= form_with(model: current_user.favorites.find_by(message_id: message.id), local: true, method: :delete) do |f| %>
+                <%= hidden_field_tag :message_id, message.id %>
+                <%= f.button :type => "submit", :class =>"btn btn-default btn-sm" do  %>
+                  <i class="fas fa-heart unfavorite-btn"></i>
+                <% end %>
+              <% end %>
+            <% else %>
+              <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
+                <%= hidden_field_tag :message_id, message.id %>
+                <%= f.button :type => "submit", :class =>"btn btn-default btn-sm" do %>
+                  <i class="fas fa-heart favorite-btn"></i>
+                <% end %>
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
       </div>
     </li>
