--- a/app/views/users/_edit_user.html.erb
+++ b/app/views/users/_edit_user.html.erb
@@ -1,11 +1,7 @@
-<div class="text-center mt-3">
-  <u><h1>アカウント作成</h1></u>
-</div>
-
 <div class="row">
-  <div class="col-sm-6 offset-sm-3">
+  <div class="col-sm-6 offset-sm-3 mb-5">
 
-    <%= form_with(model: @user, local: true) do |f| %>
+    <%= form_with(model: user, local: true) do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
       
       <div class="form-group">
@@ -27,8 +23,14 @@
         <%= f.label :password_confirmation, 'パスワード (確認用)' %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
+      
+      <div class="form-group">
+        <%= f.label :team_id, '好きな球団を1つ選択してください。' %>
+        <%= f.label :team_id, '好きな球団を選択すると選択した球団の掲示板にアクセスできます。' %>
+        <%= f.collection_select :team_id, Team.all, :id, :team_name, include_blank: true %>
+      </div>
 
-      <%= f.submit 'アカウント作成', class: 'btn btn-primary btn-block' %>
+      <%= f.submit '完了', class: 'btn btn-primary btn-block' %>
     <% end %>
   </div>
 </div>
